Add hellotext Add Button function to update hello to olla

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidOlla</string>
+    <string name="txt_hello">Hello World!</string>
+    <string name="btn_olla">OLLA!</string>
+    <string name="olla_message">OLLA!!!!</string>
 </resources>
